<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.cheney.gankjava.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_category"
        android:name="com.cheney.gankjava.ui.category.CategoryFragment"
        android:label="@string/title_category"
        tools:layout="@layout/fragment_category" />

    <fragment
        android:id="@+id/navigation_girl"
        android:name="com.cheney.gankjava.ui.girl.GirlFragment"
        android:label="@string/title_girl"
        tools:layout="@layout/fragment_girl" />

    <fragment
        android:id="@+id/navigation_my"
        android:name="com.cheney.gankjava.ui.my.MyFragment"
        android:label="@string/title_my"
        tools:layout="@layout/fragment_my" />

    <action
        android:id="@+id/action_to_webViewFragment"
        app:destination="@id/webViewFragment"/>

    <fragment
        android:id="@+id/webViewFragment"
        android:name="com.cheney.gankjava.ui.web.WebViewFragment"
        android:label="WebViewFragment">
        <argument
            android:name="title"
            app:argType="string" />
        <argument
            android:name="url"
            app:argType="string" />
    </fragment>
</navigation>